# eggcrack-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt
include/factory/: IdSequencer.hpp  Product.hpp  ProductFactory.hpp  ProductFactoryBuilder.hpp
include/factory/worker/: BlueWorker.hpp  OrangeWorker.hpp  RedWorker.hpp
include/storage/mailbox/: FiniteMailbox.hpp  InfiniteMailbox.hpp  Mailbox.hpp
